--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -21,3 +21,23 @@ body {
 .game-container {
   display: none;
 }
+#correct-img {
+  display: none;
+}
+#incorrect-img {
+  display: none;
+}
+#timesup-img {
+  display: none;
+}
+#gameover-img {
+  display: none;
+}
+.img-thumbnail {
+  padding: 0;
+  border: 0;
+  }
+  #score {
+    display: none;
+  }
+  
